class Component:
    def __init__(self, entityId):
        self.entityId = entityId
