from component import Component


class DrawableComponent(Component):

    def __init__(self, entity_id, assets_path):
        super().__init__(entity_id)
        pass

    def get_image(self, size):
        pass
