from src.components.component import Component


class InventoryItemComponent(Component):
    def __init__(self, entity_id):
        super(InventoryItemComponent, self).__init__(entity_id)
