from src.components.component import Component


class MapItemComponent(Component):
    def __init__(self, entity_id):
        super(MapItemComponent, self).__init__(entity_id)
